[gd_scene load_steps=10 format=3 uid="uid://dmg8llre333nt"]

[ext_resource type="Texture2D" uid="uid://6aqd4awkq33e" path="res://Assets/interactables/StudyRoom/KeyPad.PNG" id="1_0g3m3"]
[ext_resource type="Script" path="res://UI Elements/Safe/safe.gd" id="1_wa1au"]
[ext_resource type="Texture2D" uid="uid://dmj5i7rprhxyj" path="res://Assets/icons/close_gui.png" id="3_0fb5b"]
[ext_resource type="Texture2D" uid="uid://cdf6qmoejrrvw" path="res://Assets/icons/blank.png" id="4_i8041"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sneaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mr0gm"]
bg_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ebhw"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl121"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5x2l"]
bg_color = Color(0, 0, 0, 0.196078)
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[node name="Safe" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wa1au")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(911, 695)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_0g3m3")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1397.0
offset_top = 143.0
offset_right = 1405.0
offset_bottom = 151.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_sneaq")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mr0gm")
theme_override_styles/hover = SubResource("StyleBoxFlat_2ebhw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pl121")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5x2l")

[node name="TextureRect" type="TextureRect" parent="Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0fb5b")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 814.0
offset_top = 53.0
offset_right = 1033.0
offset_bottom = 185.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Display" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 96
text = "0000"

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_left = 676.0
offset_top = 373.0
offset_right = 684.0
offset_bottom = 381.0
action_mode = 0
flat = true

[node name="TextureRect" type="TextureRect" parent="Button1"]
layout_mode = 0
offset_left = 7.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 129.0
texture = ExtResource("4_i8041")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 843.0
offset_top = 373.0
offset_right = 851.0
offset_bottom = 381.0
action_mode = 0
flat = true

[node name="TextureRect2" type="TextureRect" parent="Button2"]
layout_mode = 0
offset_left = 10.0
offset_top = -1.0
offset_right = 138.0
offset_bottom = 127.0
texture = ExtResource("4_i8041")

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 1011.0
offset_top = 371.0
offset_right = 1019.0
offset_bottom = 379.0
action_mode = 0
flat = true

[node name="TextureRect3" type="TextureRect" parent="Button3"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 140.0
offset_bottom = 130.0
texture = ExtResource("4_i8041")

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 676.0
offset_top = 515.0
offset_right = 684.0
offset_bottom = 523.0
action_mode = 0
flat = true

[node name="TextureRect4" type="TextureRect" parent="Button4"]
layout_mode = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 136.0
offset_bottom = 129.0
texture = ExtResource("4_i8041")

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 843.0
offset_top = 517.0
offset_right = 851.0
offset_bottom = 525.0
action_mode = 0
flat = true

[node name="TextureRect5" type="TextureRect" parent="Button5"]
layout_mode = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 136.0
offset_bottom = 129.0
texture = ExtResource("4_i8041")

[node name="Button6" type="Button" parent="."]
layout_mode = 0
offset_left = 1010.0
offset_top = 519.0
offset_right = 1018.0
offset_bottom = 527.0
action_mode = 0
flat = true

[node name="TextureRect6" type="TextureRect" parent="Button6"]
layout_mode = 0
offset_left = 10.0
offset_top = -2.0
offset_right = 138.0
offset_bottom = 126.0
texture = ExtResource("4_i8041")

[node name="Button7" type="Button" parent="."]
layout_mode = 0
offset_left = 677.0
offset_top = 658.0
offset_right = 685.0
offset_bottom = 666.0
action_mode = 0
flat = true

[node name="TextureRect7" type="TextureRect" parent="Button7"]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 135.0
offset_bottom = 131.0
texture = ExtResource("4_i8041")

[node name="Button8" type="Button" parent="."]
layout_mode = 0
offset_left = 842.0
offset_top = 661.0
offset_right = 850.0
offset_bottom = 669.0
action_mode = 0
flat = true

[node name="TextureRect8" type="TextureRect" parent="Button8"]
layout_mode = 0
offset_left = 8.0
offset_right = 136.0
offset_bottom = 128.0
texture = ExtResource("4_i8041")

[node name="Button9" type="Button" parent="."]
layout_mode = 0
offset_left = 1011.0
offset_top = 662.0
offset_right = 1019.0
offset_bottom = 670.0
action_mode = 0
flat = true

[node name="TextureRect9" type="TextureRect" parent="Button9"]
layout_mode = 0
offset_left = 9.0
offset_right = 137.0
offset_bottom = 128.0
texture = ExtResource("4_i8041")

[node name="Button0" type="Button" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 809.0
offset_right = 848.0
offset_bottom = 817.0
action_mode = 0
flat = true

[node name="TextureRect10" type="TextureRect" parent="Button0"]
layout_mode = 0
offset_left = 10.0
offset_top = 1.0
offset_right = 138.0
offset_bottom = 129.0
texture = ExtResource("4_i8041")

[node name="Button*" type="Button" parent="."]
layout_mode = 0
offset_left = 671.0
offset_top = 810.0
offset_right = 679.0
offset_bottom = 818.0
action_mode = 0
flat = true

[node name="TextureRect11" type="TextureRect" parent="Button*"]
layout_mode = 0
offset_left = 13.0
offset_top = 1.0
offset_right = 141.0
offset_bottom = 129.0
texture = ExtResource("4_i8041")

[node name="Button#" type="Button" parent="."]
layout_mode = 0
offset_left = 1009.0
offset_top = 810.0
offset_right = 1017.0
offset_bottom = 818.0
action_mode = 0
flat = true

[node name="TextureRect12" type="TextureRect" parent="Button#"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 136.0
offset_bottom = 130.0
texture = ExtResource("4_i8041")

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="Button*" to="." method="_on_button_star_pressed"]
[connection signal="pressed" from="Button#" to="." method="_on_button_pound_pressed"]
